--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -1387,6 +1387,7 @@ We will care primarily about the stronger case in which
 \end{ex}
 
 \subsection{Monoidal Functors}
+\label{sec:monoidal-functors}
 
 Let us work out what a ``monoidal functor'' between monoidal categories should be. Let
 $\cat{C}$ and $\cat{D}$ be monoidal categories, and annotate their respective
