--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -1710,3 +1710,54 @@
 	archivePrefix = {arXiv},
 	primaryClass = {math.CT},
 }
+
+@phdthesis{de-felice-2017,
+	year = {2017},
+	school = {University of Oxford},
+	title = {Hopf Algebras in Quantum Computation},
+	author = {de Felice, Giovanni},
+	url = {https://www.cs.ox.ac.uk/people/bob.coecke/Giovanni},
+}
+
+@article{sweedler-1969,
+	ISSN = {0003486X},
+	URL = {http://www.jstor.org/stable/1970672},
+	author = {Moss Eisenberg Sweedler},
+	journal = {Annals of Mathematics},
+	number = {2},
+	pages = {323--335},
+	publisher = {Annals of Mathematics},
+	title = {Integrals for Hopf Algebras},
+	urldate = {2024-04-15},
+	volume = {89},
+	year = {1969},
+}
+
+@article{lomp-2004,
+	title = {Integrals in Hopf Algebras over Rings},
+	volume = {32},
+	ISSN = {1532-4125},
+	url = {http://dx.doi.org/10.1081/AGB-200036837},
+	DOI = {10.1081/agb-200036837},
+	number = {12},
+	journal = {Communications in Algebra},
+	publisher = {Informa UK Limited},
+	author = {Lomp, Christian},
+	year = {2004},
+	month = dec,
+	pages = {4687–4711},
+}
+
+@article{sullivan-1971,
+	title = {The uniqueness of integrals for Hopf algebras and some existence
+	         theorems of integrals for commutative Hopf algebras},
+	journal = {Journal of Algebra},
+	volume = {19},
+	number = {3},
+	pages = {426-440},
+	year = {1971},
+	issn = {0021-8693},
+	doi = {https://doi.org/10.1016/0021-8693(71)90100-1},
+	url = {https://www.sciencedirect.com/science/article/pii/0021869371901001},
+	author = {John Brendan Sullivan},
+}
