--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -89,14 +89,14 @@ support of my friends and family. I love and appreciate you all so much.
 % \listoftables
 % \listoffigures
 
-\chapter*{}
-\begin{dedication}
-  Desar's chosen field in mathematics was so esoteric that nobody in the
-  Institute or the Math Federation could really check on his progress. That was
-  precisely why he had chosen it.
-
-  --- Ursula Le Guin, \emph{The Dispossessed}
-\end{dedication}
+% \chapter*{}
+% \begin{dedication}
+%   Desar's chosen field in mathematics was so esoteric that nobody in the
+%   Institute or the Math Federation could really check on his progress. That was
+%   precisely why he had chosen it.
+%
+%   --- Ursula Le Guin, \emph{The Dispossessed}
+% \end{dedication}
 
 
 % \chapter*{Abstract}
