--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -99,6 +99,8 @@
 \newcommand{\state}[1]{\operatorname*{st}(#1)}
 \newcommand{\onecomb}[1]{\operatorname*{1-comb}(#1)}
 \newcommand{\ncomb}[1]{\operatorname*{n-comb}(#1)}
+\let\prot\relax
+\newcommand{\prot}[2]{\operatorname{prot}_{#1}(#2)}
 
 % theorems
 \theoremstyle{plain}
@@ -113,7 +115,6 @@
 \newtheorem{dfn}[thm]{Definition}
 \newtheorem{con}[thm]{Construction}
 \newtheorem{ex}[thm]{Example}
-\newtheorem{_prot}[thm]{Protocol}
 \newtheorem{_game}[thm]{Game}
 \newtheorem{_algo}[thm]{Algorithm}
 
@@ -141,9 +142,6 @@
 
 % crypto stuff
 \usepackage{mdframed}
-\newenvironment{prot}[1]
-{\begin{mdframed}\begin{_prot}[#1]\mbox{}}
-			{\end{_prot}\end{mdframed}}
 \newenvironment{game}
 {\begin{mdframed}\begin{_game}\mbox{}\begin{enumerate}[itemsep=-0.2em]}
 				{\end{enumerate}\end{_game}\end{mdframed}}
@@ -242,6 +240,12 @@
 }
 \tikzset{
   multimorphism/.style = {regular polygon, regular polygon sides=3,draw,shape border rotate=-90}
+}
+
+\tikzset{
+  triangle/.style = {draw, regular polygon, regular polygon sides=3, yscale=0.7},
+  rotated/.style = {shape border rotate=180},
+  dashedstate/.style = {triangle, rotated, dashed},
 }
 % \def\multimorphism[#1,#2][#3,#4]#5#6#7
 %   \path (#1,#2)
